--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <img src="img/daehak-ro.jpg"  alt="Séoul, rue Daehak-Ro">
             <img src="img/jeonju.jpg" alt="Ville de Corée : Jeonju">
             <img src="img/incheon.jpg"   alt="Ville de Corée :  Incheon">
-            <img src="/img/city2.jpg" class="portrait" alt="Rue d'une ville de Corée">
+            <img src="img/city2.jpg" class="portrait" alt="Rue d'une ville de Corée">
             <img src="img/koreaflag.jpg" alt="Drapeau Coréen">
             <img src="img/sun.jpg" alt="Séoul au levé du soleil">
             <img src="img/gyeongju.jpg"   alt="Ville de Corée : Gyeongju">
-            <img src="/img/money.jpg" class="portrait" alt="Argent coréen : le Won">
+            <img src="img/money.jpg" class="portrait" alt="Argent coréen : le Won">
             <img src="img/night-life.jpg" alt="Rue Coréenne ">
-            <img src="/img/seoul2.jpg" alt="Séoul">
+            <img src="img/seoul2.jpg" alt="Séoul">
             <img src="img/seoul-light.jpg" alt="Luminaire dans la ville de Séoul">        
     
         </article>
